# garmin-graphics-generator

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
.github/: release.yml
.github/workflows/: main.yml
src/garmin_graphics_generator/: __init__.py  cli.py  constants.py  core.py
src/garmin_graphics_generator/data/: defaults.json
tests/: __init__.py  test_core.py  test_integration.py
